# koreo-tooling

./: .gitignore  MANIFEST.in  README.md  koreo-ls  pyproject.toml  test-validation.k.yaml
.github/workflows/: build-and-test.yaml  publish-dev.yaml  publish-release.yaml
src/: inspector.py  koreo-cli.py  koreo-ls.py  server.py
src/cli/: __main__.py  apply.py  inspect.py  prune.py  reconcile.py  validate.py
src/koreo_tooling/: __init__.py  analysis.py  cel_utils.py  constants.py  error_handling.py  function_test.py  indexing.py  k8s_validation.py  k8s_validation_enhanced.py  path_resolver.py  schema_validation.py  server.py  yaml_processor.py  yaml_utils.py
src/koreo_tooling/indexing/: __init__.py  cel_semantics.py  extractor.py  koreo_semantics.py  semantics.py
src/koreo_tooling/langserver/: cel_diagnostics.py  codelens.py  completions.py  fileprocessor.py  function_test.py  hover.py  orchestrator.py  rangers.py  workflow.py
src/koreo_tooling/validation/: __init__.py  cli.py  semantic.py
tests/: test_k8s_validation.py  test_server_k8s_integration.py  test_syntax_highlighting.yaml
tests/koreo_tooling/: test_k8s_validation.py  test_schema_validation.py
tests/koreo_tooling/indexing/: test_cel_improvements.py  test_cel_semantics.py  test_semantics.py
