[project]
name = "koreo-tooling"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Robert Kluin", email = "robert.kluin@realkinetic.com"},
]
dependencies = [
    "cel-python==0.1.5",
    "pygls==2.0.0a2",
    "pyyaml==6.0.2",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../koreo-core#egg=koreo",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=src",
  "--cov-branch",
  "--cov-report=term-missing",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "colorist>=1.8.3",
]
